--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-egg-white;
+}
+
+@layer components {
+  h2 {
+    @apply text-3xl text-egg-white font-bold;
+  }
+  a {
+    @apply text-egg-white duration-200 ease-in-out uppercase;
+  }
+  a:hover {
+    @apply text-sun-orange;
+  }
+}
